[tool.poetry]
name = "evergy-csv"
version = "0.1.0"
description = ""
authors = ["Noah Guillory <noah@noahguillory.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "evergy_csv"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.5.0"
requests = "^2.28.1"
webdriver-manager = "^3.8.4"
packaging = "^21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
